--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,31 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_scis.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Learning Debiased Classifier with Biased Committee</h4>
+			<p class="text-muted">
+				Nayeong Kim, Sehyun Hwang, Sungsoo Ahn, <b>Jaesik Park</b>, and Suha Kwak.
+				<em>Workshop on Spurious Correlations, Invariance, and Stability (SCIS), <b>ICML workshop</b>, 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Learning_SCIS_2022" aria-expanded="false" aria-controls="Kim_Learning_SCIS_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Learning_SCIS_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kim_Learning_SCIS_2022,<br>
+							Title={Learning Debiased Classifier with Biased Committee},<br>
+							Author={Nayeong Kim and Sehyun Hwang and Sungsoo Ahn and Jaesik Park and Suha Kwak},<br>
+							Booktitle={Proceedings of the Workshop on Spurious Correlations, Invariance, and Stability (SCIS), ICML workshop},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Learning to Register Unbalanced Point Pairs</h4>
 			<p class="text-muted">
