--- a/data/news.html
+++ b/data/news.html
@@ -1,7 +1,8 @@
+2022.07. <a href="http://www.open3d.org/"><b>Open3D</b></a> (7.1k Github stars) is designated as a <b>critical project</b> by <a href="https://pypi.org/">PyPI</a>. PyPI assigns critical for 1% of most downloaded projects.
 2022.07. <a href="https://jaesik.info/publications">Three papers</a> got accepted to <b>ECCV 2022</b>.
 2022.06. <a href="https://arxiv.org/abs/2206.09479" target="_blank"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
 2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
-2022.03. Three papers got accepted to <b>CVPR 2022</b>.2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
+2022.03. Three papers got accepted to <b>CVPR 2022</b>.
 2022.02. I will serve as an Area Chair for <b>ECCV 2022</b>.
 2022.01. Our paper about comprehensive point cloud refinement and reconstruction is accepted to <b>ICLR 2022</b>.
 2021.12. <a href="https://humbi-data.net" target="_blank"><b>HUMBI</b></a>: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge is accepted to <b>TPAMI</b>.
