--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> (7.1k Github stars) is designated as a <b>critical project</b> by <a href="https://pypi.org/" target="_blank">PyPI</a>. PyPI assigns critical for the top 1% of most downloaded projects.
+					2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
 				</li>
 				<li class="list-group-item">
 					2022.07. <a href="https://jaesik.info/publications">Three papers</a> got accepted to <b>ECCV 2022</b>.
