--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,4 @@
-2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> (7.1k Github stars) is designated as a <b>critical project</b> by <a href="https://pypi.org/" target="_blank">PyPI</a>. PyPI assigns critical for the top 1% of most downloaded projects.
+2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
 2022.07. <a href="https://jaesik.info/publications">Three papers</a> got accepted to <b>ECCV 2022</b>.
 2022.06. <a href="https://arxiv.org/abs/2206.09479" target="_blank"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
 2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
