support container id so the html link to the container can work

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 					2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
 				</li>
 				<li class="list-group-item">
-					2022.07. <a href="https://jaesik.info/publications">Three papers</a> got accepted to <b>ECCV 2022</b>.
+					2022.07. <a href="publications.html#Lee_StyleAgnostic_ECCV_2022">Three papers</a> got accepted to <b>ECCV 2022</b>.
 				</li>
 				<li class="list-group-item">
-					2022.06. <a href="https://arxiv.org/abs/2206.09479" target="_blank"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
+					2022.06. <a href="publications.html#Kang_StudioGAN_arXiv_2022"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
 				</li>
 				<li class="list-group-item">
 					2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 				</li>
 				<li class="list-group-item">
-					2022.03. Three papers got accepted to <b>CVPR 2022</b>.
+					2022.03. <a href="publications.html#Lee_Instancewise_CVPR_2022">Three papers</a> got accepted to <b>CVPR 2022</b>.
 				</li>
 				<li class="list-group-item">
 					2022.02. I will serve as an Area Chair for <b>ECCV 2022</b>.
