--- a/publications/depthups/index.html
+++ b/publications/depthups/index.html
@@ -78,9 +78,9 @@
 			</p>
 			<p>
 				<a href="publications/depthups/tip14_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_TIP_2014" aria-expanded="false" aria-controls="Park_High_TIP_2014">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_TIP_2014_bibtex_button" aria-expanded="false" aria-controls="Park_High_TIP_2014_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Park_High_TIP_2014">
+			<div class="collapse" id="Park_High_TIP_2014_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
@@ -104,9 +104,9 @@
 				<a href="publications/depthups/iccv11_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
 				<a href="publications/depthups/iccv11_executable.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
 				<a href="publications/depthups/iccv11_dataset.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_ICCV_2011" aria-expanded="false" aria-controls="Park_High_ICCV_2011">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_ICCV_2011_bibtex_button" aria-expanded="false" aria-controls="Park_High_ICCV_2011_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Park_High_ICCV_2011">
+			<div class="collapse" id="Park_High_ICCV_2011_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
