--- a/publications.html
+++ b/publications.html
@@ -124,8 +124,9 @@
 			<img src="publications/data/22_eccv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Style-Agnostic Reinforcement Learning</h4>
 			<p class="text-muted">
-				Juyong Lee, Seokjun Ahn, and <b>Jaesik Park</b>.
+				Juyong Lee*, Seokjun Ahn*, and <b>Jaesik Park</b>.
 				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
+				<br>(*Equal contribution)
 			</p>
 			<p>
 				<a href="https://github.com/POSTECH-CVLab/style-agnostic-RL" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
@@ -155,6 +156,7 @@
 				<br>(*Equal contribution)
 			</p>
 			<p>
+				<a href="https://github.com/LifeBeyondExpectations/ECCV22-PointMixer" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_PointMixer_ECCV_2022_bibtex_button" aria-expanded="false" aria-controls="Choe_PointMixer_ECCV_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Choe_PointMixer_ECCV_2022_bibtex_button">
