update junha's picture

--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -36,7 +36,7 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/junha.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/junha.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Junha Lee</h5>
 			2021 Fall<br>
 			Ph.D. student
