adding perfception publication

--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,35 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Jeong_PeRFception_arXiv_2022">
+			<img src="publications/data/22_perfception.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>PeRFception: Perception using Radiance Fields</h4>
+			<p class="text-muted">
+				Yoonwoo Jeong*, Seungjoo Shin*, Junha Lee*, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b>.
+				<em>2208.11537 (arXiv), 2022</em>
+				<br>(*Equal contribution)
+			</p>
+			<p>
+				<a href="https://postech-cvlab.github.io/PeRFception/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2208.11537" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/POSTECH-CVLab/PeRFception" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeong_PeRFception_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Jeong_PeRFception_arXiv_2022_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jeong_PeRFception_arXiv_2022_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Jeong_PeRFception_arXiv_2022,<br>
+							Title={PeRFception: Perception using Radiance Fields},<br>
+							Author={Yoonwoo Jeong and Seungjoo Shin and Junha Lee and Christopher Choy and Animashree Anandkumar and Minsu Cho and Jaesik Park},<br>
+							Journal={2208.11537 (arXiv)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kim_Learning_SCIS_2022">
 			<img src="publications/data/22_scis.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Learning Debiased Classifier with Biased Committee</h4>
