--- a/source/html/about_me.html
+++ b/source/html/about_me.html
@@ -5,6 +5,11 @@
 			<h2> Work Experience</h2>
 			<ul class="list-group shadow-sm">
 			<li class="list-group-item">
+				<h5>Associate Professor - POSTECH</h5>
+				Pohang, Kyungbuk, Republic of Korea<br>
+				Sep. 2022 - <kbd>current</kbd>
+			</li>
+			<li class="list-group-item">
 				<h5>Adjunct Professor - Yonsei University</h5>
 				Seoul, Republic of Korea<br>
 				April 2021 - <kbd>current</kbd>
@@ -12,7 +17,7 @@
 			<li class="list-group-item">
 				<h5>Assistant Professor - POSTECH</h5>
 				Pohang, Kyungbuk, Republic of Korea<br>
-				April 2019 - <kbd>current</kbd>
+				April 2019 - Aug. 2022
 			</li>
 			<li class="list-group-item">
 				<h5>Staff Research Scientist - Intel Labs</h5>
