--- a/source/html/index_skeleton.html
+++ b/source/html/index_skeleton.html
@@ -11,7 +11,7 @@
 			<h1>Jaesik Park</h1>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am an Assistant Professor at POSTECH.
+					<p class="lead">Hello! I am an associate professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
 					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together.
 					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 				</li>
