--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<h1>Jaesik Park</h1>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am an associate professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
+					<p class="lead">Hello! I am an Associate Professor at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>.
 					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together.
 					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 				</li>
@@ -59,7 +59,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2022.09. I've been promoted to associate professor.
+					2022.09. I've been promoted to Associate Professor.
 				</li>
 				<li class="list-group-item">
 					2022.08. We release <a href="publications.html#Jeong_PeRFception_arXiv_2022"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
