--- a/publications.html
+++ b/publications.html
@@ -158,6 +158,7 @@
 				<br>(*Equal contribution)
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2208.14863" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/POSTECH-CVLab/style-agnostic-RL" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_StyleAgnostic_ECCV_2022_bibtex_button" aria-expanded="false" aria-controls="Lee_StyleAgnostic_ECCV_2022_bibtex_button">BibTeX</a>
 			</p>
