ToG paper update

--- a/publications.html
+++ b/publications.html
@@ -371,9 +371,10 @@
 			<p class="text-muted">
 				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
 				<em>ACM Transactions on Graphics (<b>ToG</b>), 2022</em>
-				<br>(will be presented at <b>SIGGRAPH2022</b>)
+				<br>(also presented at <b>SIGGRAPH2022</b>)
 			</p>
 			<p>
+				<a href="https://dl.acm.org/doi/full/10.1145/3503926" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_TextureMe_ToG_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_TextureMe_ToG_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_TextureMe_ToG_2022_bibtex_button">
