--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.02. I will serve as an Area Chair for <b>CVPR 2023</b>.
+				</li>
+				<li class="list-group-item">
 					2022.09. I've been promoted to Associate Professor.
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 				</li>
-				<li class="list-group-item">
-					2022.03. <a href="publications.html#Lee_Instancewise_CVPR_2022">Three papers</a> got accepted to <b>CVPR 2022</b>.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.03. <a href="publications.html#Lee_Instancewise_CVPR_2022">Three papers</a> got accepted to <b>CVPR 2022</b>.
+					</li>
 					<li class="list-group-item">
 						2022.02. I will serve as an Area Chair for <b>ECCV 2022</b>.
 					</li>
