--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three papers</a> got accepted to <b>NeurIPS 2022</b>.
 2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
 2022.09. I've been promoted to Associate Professor.
 2022.08. We release <a href="publications.html#Jeong_PeRFception_arXiv_2022"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
