--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,7 @@
 				Yoonwoo Jeong*, Seungjoo Shin*, Junha Lee*, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>) Datasets and Benchmarks Track, 2022</em>
 				<br>(*Equal contribution)
+				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/PeRFception" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PeRFception on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PeRFception/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PeRFception on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="https://postech-cvlab.github.io/PeRFception/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
@@ -341,6 +342,7 @@
 			<p class="text-muted">
 				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
+				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/FastPointTransformer" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/FastPointTransformer on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/FastPointTransformer/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/FastPointTransformer on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="http://cvlab.postech.ac.kr/research/FPT/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
