--- a/data/news.html
+++ b/data/news.html
@@ -1,6 +1,6 @@
 2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
 2022.09. I've been promoted to Associate Professor.
-2022.08. We release <a href="publications.html#Jeong_PeRFception_arXiv_2022"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
+2022.08. We release <a href="https://postech-cvlab.github.io/PeRFception"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
 2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
 2022.07. <a href="publications.html#Lee_StyleAgnostic_ECCV_2022">Three papers</a> got accepted to <b>ECCV 2022</b>.
 2022.06. <a href="publications.html#Kang_StudioGAN_arXiv_2022"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
