--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
+				</li>
+				<li class="list-group-item">
 					2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three papers</a> got accepted to <b>NeurIPS 2022</b>.
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.07. <a href="publications.html#Lee_StyleAgnostic_ECCV_2022">Three papers</a> got accepted to <b>ECCV 2022</b>.
 				</li>
-				<li class="list-group-item">
-					2022.06. <a href="publications.html#Kang_StudioGAN_arXiv_2022"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.06. <a href="publications.html#Kang_StudioGAN_arXiv_2022"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
+					</li>
 					<li class="list-group-item">
 						2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 					</li>
