--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					2022.09. I've been promoted to Associate Professor.
 				</li>
 				<li class="list-group-item">
-					2022.08. We release <a href="https://postech-cvlab.github.io/PeRFception"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
+					2022.08. We release <a href="https://postech-cvlab.github.io/PeRFception" target="_blank"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
 				</li>
 				<li class="list-group-item">
 					2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
