--- a/about_me.html
+++ b/about_me.html
@@ -115,7 +115,7 @@
 			<h2>Curriculum Vitae</h2>
 			<ul class="list-group shadow-sm">
 			<li class="list-group-item">
-				Please download <a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
+				<a href="cv_jaesik_park.pdf" target="_blank"><img src = "data/file-down.svg" width="32" height="32">  cv_jaesik_park.pdf</a>
 			</li>
 			</ul>
 		</div>
