--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,7 @@
 			<img src="publications/data/22_context.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Context-Aware Image Completion</h4>
 			<p class="text-muted">
-				Jinoh Cho, Minguk Kang, and <b>Jaesik Park</b>.
+				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
 				<em>2210.xxxx (arXiv), 2022</em>
 			</p>
 			<p>
@@ -86,7 +86,7 @@
 						<p class="card-text text-start fw-lighter">
 							@article{Cho_ContextAware_arXiv_2022,<br>
 							Title={Context-Aware Image Completion},<br>
-							Author={Jinoh Cho and Minguk Kang and Jaesik Park},<br>
+							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
 							Journal={2210.xxxx (arXiv)},<br>
 							Year={2022}<br>
 							}
@@ -100,10 +100,10 @@
 			<h4 class="em-tight">Substructure-Atom Cross Attention for Molecular Representation Learning</h4>
 			<p class="text-muted">
 				Jiye Kim, Seungbeom Lee, Dongwoo Kim, Sungsoo Ahn, and <b>Jaesik Park</b>.
-				<em>2210.xxxx (arXiv), 2022</em>
+				<em>2210.08243 (arXiv), 2022</em>
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2210.xxxx" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2210.08243" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SubstructureAtom_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SubstructureAtom_arXiv_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_SubstructureAtom_arXiv_2022_bibtex_button">
@@ -113,7 +113,7 @@
 							@article{Kim_SubstructureAtom_arXiv_2022,<br>
 							Title={Substructure-Atom Cross Attention for Molecular Representation Learning},<br>
 							Author={Jiye Kim and Seungbeom Lee and Dongwoo Kim and Sungsoo Ahn and Jaesik Park},<br>
-							Journal={2210.xxxx (arXiv)},<br>
+							Journal={2210.08243 (arXiv)},<br>
 							Year={2022}<br>
 							}
 						</p>
