--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.10. <a href="https://github.com/isl-org/Open3D/releases/tag/v0.16.0" target="_blank"><b>Open3D 0.16 Release!</b></a> We had a successful Google Summer of Code 2022.
+				</li>
+				<li class="list-group-item">
 					2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.07. <a href="http://www.open3d.org/" target="_blank"><b>Open3D</b></a> is designated as a <b>critical project</b> (the top 1% of most downloaded among 388K projects) by <a href="https://pypi.org/" target="_blank">The Python Package Index (PyPI)</a>. 
 				</li>
-				<li class="list-group-item">
-					2022.07. <a href="publications.html#Lee_StyleAgnostic_ECCV_2022">Three papers</a> got accepted to <b>ECCV 2022</b>.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.07. <a href="publications.html#Lee_StyleAgnostic_ECCV_2022">Three papers</a> got accepted to <b>ECCV 2022</b>.
+					</li>
 					<li class="list-group-item">
 						2022.06. <a href="publications.html#Kang_StudioGAN_arXiv_2022"><b>StudioGAN</b> paper</a> - we release an extensive benchmark of state-of-the-art GANs. 
 					</li>
