--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2022.10. <a href="https://github.com/isl-org/Open3D/releases/tag/v0.16.0" target="_blank"><b>Open3D 0.16 Release!</b></a> We had a successful Google Summer of Code 2022.
 2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
 2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three papers</a> got accepted to <b>NeurIPS 2022</b>.
 2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
