--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2022.10. <a href="https://github.com/isl-org/Open3D/releases/tag/v0.16.0" target="_blank"><b>Open3D 0.16 Release!</b></a> We had a successful Google Summer of Code 2022.
+					2022.10. <a href="https://github.com/isl-org/Open3D/releases/tag/v0.16.0" target="_blank"><b>Open3D 0.16 Release!</b></a> We had a successful <a href="https://summerofcode.withgoogle.com/programs/2022/organizations/open3d-team" target="_blank">Google Summer of Code 2022</a>.
 				</li>
 				<li class="list-group-item">
 					2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
