--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					2022.09. <a href="publications.html#Kim_LaplacianFusion_SIGGRAPH_Asia_2022">A paper</a> about dynamic human reconstruction using a RGBD camera got accepted to <b>SIGGRAPH Asia 2022</b>.
 				</li>
 				<li class="list-group-item">
-					2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three papers</a> got accepted to <b>NeurIPS 2022</b>.
+					2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three <b>NeurIPS 2022</b> papers</a> and one NeurIPS workshop paper got accepted.
 				</li>
 				<li class="list-group-item">
 					2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
