--- a/publications.html
+++ b/publications.html
@@ -95,32 +95,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 text-center" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022">
-			<img src="publications/data/22_molecular_learning.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">Substructure-Atom Cross Attention for Molecular Representation Learning</h4>
-			<p class="text-muted">
-				Jiye Kim, Seungbeom Lee, Dongwoo Kim, Sungsoo Ahn, and <b>Jaesik Park</b>.
-				<em>AI for Science, <b>NeurIPS workshop</b>, 2022</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2210.08243" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022,<br>
-							Title={Substructure-Atom Cross Attention for Molecular Representation Learning},<br>
-							Author={Jiye Kim and Seungbeom Lee and Dongwoo Kim and Sungsoo Ahn and Jaesik Park},<br>
-							Journal={AI for Science, NeurIPS workshop},<br>
-							Year={2022}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="col-lg-4 text-center" id="Ahn_Sequential_arXiv_2022">
 			<img src="publications/data/22_brick.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Sequential Brick Assembly with Efficient Constraint Satisfaction</h4>
@@ -246,6 +220,57 @@
 							Title={A Roatated Hyperbolic Wrapped Normal Distribution for Hierarchical Representation Learning},<br>
 							Author={Seunghyuk Cho and Juyong Lee and Jaesik Park and Dongwoo Kim},<br>
 							Booktitle={Proceedings of the Conference on Neural Information Processing Systems (NeurIPS)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_SeLCA_NeurReps_2022">
+			<img src="publications/data/22_selca.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>SeLCA: Self-Supervised Learning of Canonical Axis</h4>
+			<p class="text-muted">
+				Seungwook Kim, Yoonwoo Jeong, Chunghyun Park, <b>Jaesik Park</b>, and Minsu Cho.
+				<em>Symmetry and Geometry in Neural Representations (NeurReps), <b>NeurIPS workshop</b>, 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SeLCA_NeurReps_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SeLCA_NeurReps_2022_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_SeLCA_NeurReps_2022_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_SeLCA_NeurReps_2022,<br>
+							Title={SeLCA: Self-Supervised Learning of Canonical Axis},<br>
+							Author={Seungwook Kim and Yoonwoo Jeong and Chunghyun Park and Jaesik Park and Minsu Cho},<br>
+							Journal={Symmetry and Geometry in Neural Representations (NeurReps), NeurIPS workshop},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022">
+			<img src="publications/data/22_molecular_learning.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Substructure-Atom Cross Attention for Molecular Representation Learning</h4>
+			<p class="text-muted">
+				Jiye Kim, Seungbeom Lee, Dongwoo Kim, Sungsoo Ahn, and <b>Jaesik Park</b>.
+				<em>AI for Science, <b>NeurIPS workshop</b>, 2022</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2210.08243" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022,<br>
+							Title={Substructure-Atom Cross Attention for Molecular Representation Learning},<br>
+							Author={Jiye Kim and Seungbeom Lee and Dongwoo Kim and Sungsoo Ahn and Jaesik Park},<br>
+							Journal={AI for Science, NeurIPS workshop},<br>
 							Year={2022}<br>
 							}
 						</p>
