--- a/publications.html
+++ b/publications.html
@@ -241,10 +241,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Kim_SeLCA_NeurReps_2022,<br>
+							@inproceedings{Kim_SeLCA_NeurReps_2022,<br>
 							Title={SeLCA: Self-Supervised Learning of Canonical Axis},<br>
 							Author={Seungwook Kim and Yoonwoo Jeong and Chunghyun Park and Jaesik Park and Minsu Cho},<br>
-							Journal={Symmetry and Geometry in Neural Representations (NeurReps), NeurIPS workshop},<br>
+							Booktitle={Proceedings of the Symmetry and Geometry in Neural Representations (NeurReps), NeurIPS workshop},<br>
 							Year={2022}<br>
 							}
 						</p>
@@ -252,25 +252,25 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 text-center" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022">
+		<div class="col-lg-4 text-center" id="Kim_SubstructureAtom_AI4Science_2022">
 			<img src="publications/data/22_molecular_learning.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Substructure-Atom Cross Attention for Molecular Representation Learning</h4>
 			<p class="text-muted">
 				Jiye Kim, Seungbeom Lee, Dongwoo Kim, Sungsoo Ahn, and <b>Jaesik Park</b>.
-				<em>AI for Science, <b>NeurIPS workshop</b>, 2022</em>
+				<em>AI for Science: Progress and Promises (AI4Science) <b>NeurIPS workshop</b>, 2022</em>
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2210.08243" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_SubstructureAtom_AI4Science_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_SubstructureAtom_AI4Science_2022_bibtex_button">BibTeX</a>
 			</p>
-			<div class="collapse" id="Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022_bibtex_button">
+			<div class="collapse" id="Kim_SubstructureAtom_AI4Science_2022_bibtex_button">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Kim_SubstructureAtom_AI_for_Science,_NeurIPS_workshop</b_2022,<br>
+							@inproceedings{Kim_SubstructureAtom_AI4Science_2022,<br>
 							Title={Substructure-Atom Cross Attention for Molecular Representation Learning},<br>
 							Author={Jiye Kim and Seungbeom Lee and Dongwoo Kim and Sungsoo Ahn and Jaesik Park},<br>
-							Journal={AI for Science, NeurIPS workshop},<br>
+							Booktitle={Proceedings of the AI for Science: Progress and Promises (AI4Science) NeurIPS workshop},<br>
 							Year={2022}<br>
 							}
 						</p>
