--- a/publications.html
+++ b/publications.html
@@ -74,10 +74,10 @@
 			<h4>Context-Aware Image Completion</h4>
 			<p class="text-muted">
 				Jinoh Cho, Minguk Kang, Vibhav Vineet, and <b>Jaesik Park</b>.
-				<em>2210.xxxx (arXiv), 2022</em>
+				<em>2210.12350 (arXiv), 2022</em>
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2210.xxxx" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="http://arxiv.org/abs/2210.12350" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_ContextAware_arXiv_2022_bibtex_button" aria-expanded="false" aria-controls="Cho_ContextAware_arXiv_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Cho_ContextAware_arXiv_2022_bibtex_button">
@@ -87,7 +87,7 @@
 							@article{Cho_ContextAware_arXiv_2022,<br>
 							Title={Context-Aware Image Completion},<br>
 							Author={Jinoh Cho and Minguk Kang and Vibhav Vineet and Jaesik Park},<br>
-							Journal={2210.xxxx (arXiv)},<br>
+							Journal={2210.12350 (arXiv)},<br>
 							Year={2022}<br>
 							}
 						</p>
