--- a/publications.html
+++ b/publications.html
@@ -313,7 +313,7 @@
 				<br>(*Equal contribution)
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2208.14863" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136990596.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/POSTECH-CVLab/style-agnostic-RL" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_StyleAgnostic_ECCV_2022_bibtex_button" aria-expanded="false" aria-controls="Lee_StyleAgnostic_ECCV_2022_bibtex_button">BibTeX</a>
 			</p>
@@ -341,6 +341,7 @@
 				<br>(*Equal contribution)
 			</p>
 			<p>
+				<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136870611.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/LifeBeyondExpectations/ECCV22-PointMixer" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_PointMixer_ECCV_2022_bibtex_button" aria-expanded="false" aria-controls="Choe_PointMixer_ECCV_2022_bibtex_button">BibTeX</a>
 			</p>
@@ -367,6 +368,7 @@
 				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
 			</p>
 			<p>
+				<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136620248.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/kamse/CostDCNet" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kam_CostDCNet_ECCV_2022_bibtex_button" aria-expanded="false" aria-controls="Kam_CostDCNet_ECCV_2022_bibtex_button">BibTeX</a>
 			</p>
