--- a/publications.html
+++ b/publications.html
@@ -423,6 +423,7 @@
 				<em>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022</em>
 			</p>
 			<p>
+				<a href="https://www.ijcai.org/proceedings/2022/0146.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Learning_IJCAI_2022_bibtex_button" aria-expanded="false" aria-controls="Lee_Learning_IJCAI_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_Learning_IJCAI_2022_bibtex_button">
