--- a/lab.html
+++ b/lab.html
@@ -272,6 +272,27 @@
 				<!-- Ongoing projects -->
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
+						<h5>Samsung Advanced Institute of Technology, Republic of Korea</h5>
+						2022.12-2023.11
+					</div>
+					<p class="mb-0">Efficient Neural Radiance Field</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>LG Electronics, Republic of Korea</h5>
+						2022.06-2022.12
+					</div>
+					<p class="mb-0">3D Perception for Intelligent Robots</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2022.04-2026.12
+					</div>
+					<p class="mb-0">Multi-layered Visual Common Sense</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
 						<h5>Google LLC, USA</h5>
 						2022.03-current
 					</div>
@@ -289,7 +310,7 @@
 						<h5>Qualcomm, USA</h5>
 						2022.03-2023.03
 					</div>
-					<p class="mb-0">Visual common sense (planned)</p>
+					<p class="mb-0">Discovering visual common sense</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
@@ -322,7 +343,7 @@
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Samsung Electronics Corp.</h5>
-						2021.05-2022.05
+						2021.05-2023.07
 					</div>
 					<p class="mb-0">Camera localization</p>
 				</li>				
