--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -268,13 +268,6 @@
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>Osstem Implant, Republic of Korea</h5>
-						2022.03-2022.07
-					</div>
-					<p class="mb-0">3D reconstruction system</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
 						<h5>Ministry of Science and ICT, Republic of Korea</h5>
 						2021.09-current
 					</div>
@@ -316,6 +309,13 @@
 					<p class="mb-0">과학기술정보통신부, 인공지능대학원 지원사업 (POSTECH)</p>
 				</li>
 				<!-- Finished projects -->
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Osstem Implant, Republic of Korea</h5>
+						2022.03-2022.07
+					</div>
+					<p class="mb-0">3D reconstruction system</p>
+				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>POSTECH, Republic of Korea</h5>
