--- a/academic_activities.html
+++ b/academic_activities.html
@@ -51,6 +51,7 @@
 			<h2>Program Committee</h2>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
+					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2023<br>
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2023<br>
 					<mark>Associate Editor</mark>, Int. Conf. on Robotics and Automation (ICRA), 2023<br>
 					<mark>Area Chair</mark>, European Conf. on Computer Vision (ECCV), 2022<br>
