--- a/lab.html
+++ b/lab.html
@@ -100,24 +100,6 @@
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Jin-Oh Cho</h5>
-			2020 Fall<br>
-			Master student
-		</div>
-		<div class="col-md-3 text-center">
-			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Seokjun Ahn</h5>
-			2020 Fall<br>
-			Master student
-		</div>
-		<div class="col-md-3 text-center">
-			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Ji Ye Kim</h5>
-			2021 Spring<br>
-			Master student
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
 			2021 Spring<br>
@@ -170,19 +152,40 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Alumni</h3>
-		<div class="col-md-3 text-center">
+		<div class="col-md-2 text-center">
 			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
 			2021 Fall<br>
 			Master degree<br>
-			Joined a stealth mode startup
+			Playtag
 		</div>		
-		<div class="col-md-3 text-center">
+		<div class="col-md-2 text-center">
 			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
 			2021 Spring<br>
 			Master degree<br>
 			LG AI Research
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jin-Oh Cho</h5>
+			2023 Spring<br>
+			Master degree<br>
+			(Expected)
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seokjun Ahn</h5>
+			2023 Spring<br>
+			Master degree<br>
+			(Expected)
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Ji Ye Kim</h5>
+			2023 Spring<br>
+			Master degree<br>
+			(Expected)
 		</div>
 	</div>
 </div>
@@ -220,6 +223,7 @@
 		<div class="col-md-3 text-center">
 			<h5>Joonghyuk Shin</h5>
 			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
+			Selected as the best undergraduate research participation (최우수 연구참여 II) 2022.12<br>
 		</div>		
 	</div>
 </div>
@@ -229,6 +233,12 @@
 			<h3>Teaching</h3>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					<h5>2022 Fall</h5>
+					[AIGS101] Artifical Intelligence Basis II*<br>
+					[CSED291] Self-Enlightenment for Com. Scientists<br>
+					[CSED703F] 3D Vision<br>
+				</li>
+				<li class="list-group-item list-group-item-light">
 					<h5>2022 Spring</h5>
 					[AIGS101] Artifical Intelligence Basis I*<br>
 					[CSED233] Data Structure<br>
