--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -122,7 +122,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Jin-Oh Cho</h5>
+			<h5>Jinoh Cho</h5>
 			2023 Spring<br>
 			Master degree<br>
 			(Expected)
@@ -136,7 +136,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Ji Ye Kim</h5>
+			<h5>Jiye Kim</h5>
 			2023 Spring<br>
 			Master degree<br>
 			(Expected)
