--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -243,13 +243,6 @@
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>LG Electronics, Republic of Korea</h5>
-						2022.06-2022.12
-					</div>
-					<p class="mb-0">3D Perception for Intelligent Robots</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
 						<h5>Ministry of Science and ICT, Republic of Korea</h5>
 						2022.04-2026.12
 					</div>
@@ -319,6 +312,13 @@
 					<p class="mb-0">과학기술정보통신부, 인공지능대학원 지원사업 (POSTECH)</p>
 				</li>
 				<!-- Finished projects -->
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>LG Electronics, Republic of Korea</h5>
+						2022.06-2022.12
+					</div>
+					<p class="mb-0">3D Perception for Intelligent Robots</p>
+				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Osstem Implant, Republic of Korea</h5>
