--- a/lab.html
+++ b/lab.html
@@ -233,6 +233,10 @@
 			<h3>Teaching</h3>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					<h5>2023 Spring</h5>
+					[CSED233] Data Structure<br>
+				</li>
+				<li class="list-group-item list-group-item-light">
 					<h5>2022 Fall</h5>
 					[AIGS101] Artifical Intelligence Basis II*<br>
 					[CSED291] Self-Enlightenment for Com. Scientists<br>
