--- a/publications.html
+++ b/publications.html
@@ -130,6 +130,7 @@
 				<br>(Accepted as a journal track paper)
 			</p>
 			<p>
+				<a href="https://dl.acm.org/doi/abs/10.1145/3550454.3555511" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_LaplacianFusion_SIGGRAPH_Asia_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_LaplacianFusion_SIGGRAPH_Asia_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_LaplacianFusion_SIGGRAPH_Asia_2022_bibtex_button">
@@ -185,6 +186,7 @@
 				<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2206.10843" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Learning_NeurIPS_2022_bibtex_button" aria-expanded="false" aria-controls="Kim_Learning_NeurIPS_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Learning_NeurIPS_2022_bibtex_button">
@@ -204,12 +206,13 @@
 		</div>
 		<div class="col-lg-4 text-center" id="Cho_A_NeurIPS_2022">
 			<img src="publications/data/22_rown.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">A Roatated Hyperbolic Wrapped Normal Distribution for Hierarchical Representation Learning</h4>
+			<h4 class="em-tight">A Rotated Hyperbolic Wrapped Normal Distribution for Hierarchical Representation Learning</h4>
 			<p class="text-muted">
 				Seunghyuk Cho, Juyong Lee, <b>Jaesik Park</b>, and Dongwoo Kim.
 				<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2205.13371" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Cho_A_NeurIPS_2022_bibtex_button" aria-expanded="false" aria-controls="Cho_A_NeurIPS_2022_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Cho_A_NeurIPS_2022_bibtex_button">
@@ -217,7 +220,7 @@
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Cho_A_NeurIPS_2022,<br>
-							Title={A Roatated Hyperbolic Wrapped Normal Distribution for Hierarchical Representation Learning},<br>
+							Title={A Rotated Hyperbolic Wrapped Normal Distribution for Hierarchical Representation Learning},<br>
 							Author={Seunghyuk Cho and Juyong Lee and Jaesik Park and Dongwoo Kim},<br>
 							Booktitle={Proceedings of the Conference on Neural Information Processing Systems (NeurIPS)},<br>
 							Year={2022}<br>
