--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,73 @@
 <div class="container mt-4">
 <div class="row">
 	<div class="col-lg-12 text-start">
+		<h2>2023</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Gao_Scenelevel_ICRA_2023">
+			<img src="publications/data/23_icra.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Scene-level Point Cloud Colorization with Semantic-and-Geometric-aware Networks</h4>
+			<p class="text-muted">
+				Rongrong Gao, Tian-Zhu Xiang, Chenyang Lei, <b>Jaesik Park</b>, and Qifeng Chen.
+				<em>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2023</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Gao_Scenelevel_ICRA_2023_bibtex_button" aria-expanded="false" aria-controls="Gao_Scenelevel_ICRA_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Gao_Scenelevel_ICRA_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Gao_Scenelevel_ICRA_2023,<br>
+							Title={Scene-level Point Cloud Colorization with Semantic-and-Geometric-aware Networks},<br>
+							Author={Rongrong Gao and Tian-Zhu Xiang and Chenyang Lei and Jaesik Park and Qifeng Chen},<br>
+							Booktitle={Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_Deep_Scientific_Reports_2023">
+			<img src="publications/data/23_scientific_reports.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Deep 3D Reconstruction of Synchrotron X-ray Computed Tomography for Intact Lungs</h4>
+			<p class="text-muted">
+				Seungjoo Shin*, Min Woo Kim*, Kyong Hwan Jin, Kwang Moo Yi, Yoshiki Kohmura, Tetsuya Ishikawa, Jung Ho Je, and <b>Jaesik Park</b>.
+				<em>published by Nature Research (<b>Scientific Reports</b>), 2023</em>
+				<br>(*Equal contribution)
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Deep_Scientific_Reports_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Deep_Scientific_Reports_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Deep_Scientific_Reports_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Shin_Deep_Scientific_Reports_2023,<br>
+							Title={Deep 3D Reconstruction of Synchrotron X-ray Computed Tomography for Intact Lungs},<br>
+							Author={Seungjoo Shin and Min Woo Kim and Kyong Hwan Jin and Kwang Moo Yi and Yoshiki Kohmura and Tetsuya Ishikawa and Jung Ho Je and Jaesik Park},<br>
+							Journal={published by Nature Research (Scientific Reports)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container mt-4">
+	<hr class="py-1">
+</div>
+
+<div class="container mt-4">
+<div class="row">
+	<div class="col-lg-12 text-start">
 		<h2>2022</h2>
 	</div>
 </div>
