--- a/lab.html
+++ b/lab.html
@@ -157,21 +157,21 @@
 			<h5>Jinoh Cho</h5>
 			2023 Spring<br>
 			Master degree<br>
-			(Expected)
+			Pursuing Ph.D.
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
 			2023 Spring<br>
 			Master degree<br>
-			(Expected)
+			Qualcomm Korea
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jiye Kim</h5>
 			2023 Spring<br>
 			Master degree<br>
-			(Expected)
+			LG AI Research
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
