links for scientific reports

--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,7 @@
 				<br>(*Equal contribution)
 			</p>
 			<p>
+				<a href="https://www.nature.com/articles/s41598-023-27627-y" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Deep_Scientific_Reports_2023_bibtex_button" aria-expanded="false" aria-controls="Shin_Deep_Scientific_Reports_2023_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Deep_Scientific_Reports_2023_bibtex_button">
