--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2023.01. One <b>ICRA 2023</b> and one <b>Scientific Reports</b> paper accepted.
+					2023.01. One <b>ICRA 2023</b> and one <b>Scientific Reports</b> paper got accepted.
 				</li>
 				<li class="list-group-item">
 					2022.11. I will serve as an Area Chair for <b>ICCV 2023</b>.
