--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2023.01. Two <b>CVPR 2023</b> papers got accepted.
+				</li>
+				<li class="list-group-item">
 					2023.01. One <b>ICRA 2023</b> paper and one <b>Scientific Reports</b> paper got accepted.
 				</li>
 				<li class="list-group-item">
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
 				</li>
-				<li class="list-group-item">
-					2022.09. I've been promoted to Associate Professor.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.09. I've been promoted to Associate Professor.
+					</li>
 					<li class="list-group-item">
 						2022.08. We release <a href="https://postech-cvlab.github.io/PeRFception" target="_blank"><b>PeRFception</b></a>: Perception using Radiance Fields dataset.
 					</li>
