--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,57 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kang_Scaling_CVPR_2023">
+			<img src="publications/data/23_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Scaling up GANs for Text-to-Image Synthesis</h4>
+			<p class="text-muted">
+				Minguk Kang*, Taesung Park*, Jun-Yan Zhu, Richard Zhang, <b>Jaesik Park</b>, Eli Shechtman, and Sylvain Paris.
+				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
+				<br>(*Equal contribution)
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Scaling_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Kang_Scaling_CVPR_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kang_Scaling_CVPR_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kang_Scaling_CVPR_2023,<br>
+							Title={Scaling up GANs for Text-to-Image Synthesis},<br>
+							Author={Minguk Kang and Taesung Park and Jun-Yan Zhu and Richard Zhang and Jaesik Park and Eli Shechtman and Sylvain Paris},<br>
+							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Ryu_Instant_CVPR_2023">
+			<img src="publications/data/23_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Instant Domain Augmentation for LiDAR Semantic Segmentation</h4>
+			<p class="text-muted">
+				Kwonyoung Ryu, Soonmin Hwang, and <b>Jaesik Park</b>.
+				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ryu_Instant_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Ryu_Instant_CVPR_2023_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Ryu_Instant_CVPR_2023_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Ryu_Instant_CVPR_2023,<br>
+							Title={Instant Domain Augmentation for LiDAR Semantic Segmentation},<br>
+							Author={Kwonyoung Ryu and Soonmin Hwang and Jaesik Park},<br>
+							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2023}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Gao_Scenelevel_ICRA_2023">
 			<img src="publications/data/23_icra.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Scene-level Point Cloud Colorization with Semantic-and-Geometric-aware Networks</h4>
