--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2023.01. Two <b>CVPR 2023</b> papers got accepted.
+					2023.02. Two <b>CVPR 2023</b> papers got accepted.
+				</li>
+				<li class="list-group-item">
+					2023.02. I will serve as an Area Chair for <b>NeurIPS 2023</b>.
 				</li>
 				<li class="list-group-item">
 					2023.01. One <b>ICRA 2023</b> paper and one <b>Scientific Reports</b> paper got accepted.
@@ -76,9 +79,6 @@
 				<li class="list-group-item">
 					2022.09. <a href="publications.html#Jeong_PeRFception_NeurIPS_2022">Three <b>NeurIPS 2022</b> papers</a> and <a href="publications.html#Kim_SeLCA_NeurReps_2022">two NeurIPS workshop papers</a> got accepted.
 				</li>
-				<li class="list-group-item">
-					2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
-				</li>
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -87,6 +87,9 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2022.09. I will serve as an Area Chair for <b>CVPR 2023</b>.
+					</li>
 					<li class="list-group-item">
 						2022.09. I've been promoted to Associate Professor.
 					</li>
