--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,4 @@
-2023.02. Two <b>CVPR 2023</b> papers got accepted.
+2023.02. <a href="publications.html#Kang_Scaling_CVPR_2023">Two <b>CVPR 2023</b> papers</a> got accepted.
 2023.02. I will serve as an Area Chair for <b>NeurIPS 2023</b>.
 2023.01. One <b>ICRA 2023</b> paper and one <b>Scientific Reports</b> paper got accepted.
 2022.11. I will serve as an Area Chair for <b>ICCV 2023</b>.
