--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2023.02. Two <b>CVPR 2023</b> papers got accepted.
+					2023.02. <a href="publications.html#Kang_Scaling_CVPR_2023">Two <b>CVPR 2023</b> papers</a> got accepted.
 				</li>
 				<li class="list-group-item">
 					2023.02. I will serve as an Area Chair for <b>NeurIPS 2023</b>.
