--- a/publications.html
+++ b/publications.html
@@ -73,9 +73,8 @@
 			<img src="publications/data/23_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Scaling up GANs for Text-to-Image Synthesis</h4>
 			<p class="text-muted">
-				Minguk Kang*, Taesung Park*, Jun-Yan Zhu, Richard Zhang, <b>Jaesik Park</b>, Eli Shechtman, and Sylvain Paris.
+				Minguk Kang, Jun-Yan Zhu, Richard Zhang, <b>Jaesik Park</b>, Eli Shechtman, Sylvain Paris, and Taesung Park.
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
-				<br>(*Equal contribution)
 			</p>
 			<p>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_Scaling_CVPR_2023_bibtex_button" aria-expanded="false" aria-controls="Kang_Scaling_CVPR_2023_bibtex_button">BibTeX</a>
@@ -86,7 +85,7 @@
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Kang_Scaling_CVPR_2023,<br>
 							Title={Scaling up GANs for Text-to-Image Synthesis},<br>
-							Author={Minguk Kang and Taesung Park and Jun-Yan Zhu and Richard Zhang and Jaesik Park and Eli Shechtman and Sylvain Paris},<br>
+							Author={Minguk Kang and Jun-Yan Zhu and Richard Zhang and Jaesik Park and Eli Shechtman and Sylvain Paris and Taesung Park},<br>
 							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
 							Year={2023}<br>
 							}
